# vulkantrap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compileDebug.sh  compileEverything.sh  plotAll.py  plotB.py  plotEatB.py  plotEs.py  plotSimpler.py  plotStokes.py  plotcsv.py  plotlines.py  plotpsim.py  plotpsip.py  reducetest.py  s3avg.py  simconf.toml  simplemodel.py
include/: GPEsim.hpp  betterexc.h  hack.hpp  mathhelpers.hpp  newvkhelpers.hpp  rk4.h  typedefs.hpp  vkhelpers.hpp
shaders/: divinplacebyscalar.comp  rk4sim.comp  s3.comp  simplermodel.comp
src/: GPEsim.cpp  main.cpp  newvkhelpers.cpp  rk4.cpp  vkhelpers.cpp
vkFFT/vkFFT/vkFFT_CodeGen/vkFFT_KernelsLevel1/PrePostProcessing/: vkFFT_R2R.h
